Let users update account email addresses. (#470)

--- a/gobotany/plantshare/templates/registration/_change_password_form.html
+++ b/gobotany/plantshare/templates/registration/_change_password_form.html
@@ -5,7 +5,7 @@
         
         {{ form.as_p }}
 
-        <p><input type="submit" value="Update Password"
+        <p><input type="submit" value="Change Password"
             class="orange-button caps">
             <a href="{% url 'ps-forgot-password' %}">Forgot Password</a>
         </p>
