--- a/gobotany/plantshare/templates/registration/password_reset_email.html
+++ b/gobotany/plantshare/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 {% load i18n %}{% autoescape off %}
-{% blocktrans %}You were sent this message because you asked to reset your
-password for PlantShare on the Go Botany site.{% endblocktrans %}
+{% blocktrans %}You were sent this message because you asked to reset your password
+for PlantShare on the Go Botany site.{% endblocktrans %}
 
 {% trans "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
@@ -10,6 +10,12 @@ password for PlantShare on the Go Botany site.{% endblocktrans %}
 
 {% trans "Thank you," %}
 
-{% blocktrans %}Go Botany{% endblocktrans %}
+{% blocktrans %}Go Botany
+
+--
+
+If you think you received this message in error, please contact
+gobotany@newenglandwild.org.
+{% endblocktrans %}
 
 {% endautoescape %}
