--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -574,7 +574,7 @@ body.plantshare {
             width: 100%;
             th {
                 &.identification {
-                    width: 33%;
+                    width: 30%;
                 }
                 &.location {
                     width: 20%;
@@ -591,6 +591,12 @@ body.plantshare {
             }
             td.action {
                 text-align: center;
+            }
+            td:first-of-type a {
+                border-bottom: 0;
+            }
+            img {
+                max-width: 80px;
             }
         }
         @include hide-default-shadowbox-close;
