Add year-based index pages with photos for sightings.
These are to allow a way to browse to sightings older than the
list on the recent sightings page. (#490)

--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -3,11 +3,19 @@
 {% load mapping_tags %}
 {% load plantshare_tags %}
 
-{% block title %}Sightings: PlantShare{% endblock %}
+{% block title %}Recent Sightings: PlantShare{% endblock %}
 
 {% block body_attributes %}id="sightings" class="plantshare"{% endblock %}
 
 {% block main_content %}
+
+<p>Recent |
+{% for year in years %}
+<a href="{% url 'ps-sightings-by-year' year %}">{{ year }}</a>
+    {% if not forloop.last %} | {% endif %}
+{% endfor %}
+</p>
+
 <h1>Recent Sightings</h1>
 
 {% regroup sightings by year as sightings_list_by_year %}
