--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -238,6 +238,7 @@ body {
         }
     }
     &.plantshare {
+        &#sightings #sidebar .sightings,
         &#sighting #sidebar .sightings,
         &#edit-sighting #sidebar .manage-sightings,
         &#questions #sidebar .ask,
